--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -1,39 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
   {% include "textchange/head.html" %}
 
   <body>
     <div class="container">
 
-      {% include "textchange/navbar.html" %}
+	  {% include "textchange/navbar.html" %}
 
-      <div class="jumbotron">
-        <h1>Texchange!</h1>
-        <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
-        <form method="POST"> {% csrf_token %}
-  		  {{ form3.as_p }}
-  		  <input id="search" class="button" type="submit" value="Search Textbooks" name="Search"></input>
-        </form>
-      </div>
+    <div style="text-align: center">
+      <form method="POST"> {% csrf_token %}
+        {% for field in form3 %}
+          {{ field.label_tag }}
+          {{ field }}
+        {% endfor %}
+      <input id="search" class="button" type="submit" value="Search Textbooks" name="Search"></input>
+      </form>
+      </br>
+    </div>
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-          {% if curuser.is_authenticated %}
-            <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
-          {% else %}
-            <a class="btn btn-lg btn-success option" onclick="alert('You must be logged in to view your Wishlist and Postings')" id="notloggedwish" href="" role="button" title="Login Required.">Wishlist and Postings</a>
-          {% endif %}
-          <span>Manage your wishlist and postings here</span>
-        </div>
-        <div class="col-lg-6">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Me</a>
-          <span>Contact and support the developer</span>
-        </div>
-      </div>
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+        <div class="panel-heading"><h4>Search Results</h4><p>You should search things</p></div>
 
-      {% include "textchange/footer.html" %}
+      <!-- Table -->
+      <table class="resultstable">
+          <tr class="borderbot" >
+            <td><span>boop</p></td>
+          </tr>
+      </table>
+    </div>
+
+    {% include "textchange/footer.html" %}
 
     </div> <!-- /container -->
 
