--- a/textchange/templates/textchange/footer.html
+++ b/textchange/templates/textchange/footer.html
@@ -1,3 +1,4 @@
 <footer class="footer">
-  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span class="floatright"><a href="https://www.facebook.com/UvicTexchange"><img src="https://texchangedb.s3.amazonaws.com/textchange/facebook.png" id="fbfooter"></a></span></p>
+  <a href="https://www.facebook.com/UvicTexchange">Facebook</a></span></p>
+  <p><a href="{% url 'textchange:about' %}" role="button">Contact Me</a>&nbsp<a href="{% url 'textchange:help' %}">Help</a></p>
 </footer>
