--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -15,15 +15,10 @@
 
   <meta name="wot-verification" content="dbc0d3681956a7bd2371"/>
 
-  <!-- Bootstrap core CSS -->
-  <link href="{% static "textchange/index.css" %}" rel="stylesheet">
   <link href="{% static "textchange/mycss.css" %}" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="{% static "textchange/jumbotron.css" %}" rel="stylesheet">
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--<script src="{% static "textchange/index.js" %}"></script> -->
-  <!-- <script src="{% static "textchange/facebook.js" %}"></script> -->
-
+  <link rel="stylesheet" type="text/css" href="{% static "autocomplete_light/vendor/select2/dist/css/select2.css" %}" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
   <link rel="shortcut icon" href="{% static "textchange/tabicon.png" %}">
 
   <!-- Info displayed when site it shared/linked -->
