--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -1,13 +1,6 @@
+{% extends "textchange/base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-  {% include "textchange/head.html" %}
-
-  <body>
-    <div class="container">
-
-      {% include "textchange/navbar.html" %}
+    {% block content %}
 
       <h1>Application Summary</h1>
       <p>Texchange was designed to make searching for used textbooks easy for UVic students. All a user has to do
@@ -77,9 +70,4 @@
       <p><a href="{% url 'textchange:fbpolicy' %}">Facebook Privacy Policy</a></p>
       <p><a href="#toc">Back to Top</a></p>
 
-      {% include "textchange/footer.html" %}
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+      {% endblock %}
