--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -1,291 +1,101 @@
-#fbfooter {
-  height: 20px;
-  width: 105px;
+body {
+  margin: 0;
 }
 
-.floatright {
+.select2-dropdown.select2-dropdown--below {
+  float: right;
+  right: 0px;
+}
+
+.container {
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100vw;
+  height: 100vh;
+}
+
+.leftcolumn {
+  width: 50%;
+  float: left;
+}
+
+.rightcolumn {
+  width: 50%;
   float: right;
 }
 
-#id_search {
-  width: 200px;
+.login {
+  float:right;
 }
 
-.green {
-  color: green;
-}
-
-.red {
-  color: red;
-}
-
-.feedback {
-  width: 360px;
-}
-
-.homebutton {
-  padding: 8px;
-  border-radius: 6px;
-}
-
-.softbutton {
-  background-color: #F8F8F8;
-  border: 1px solid #C5C5C5;
-}
-
-.resultstable td a div{
-  padding: 10px;
-}
-
-.borderbot {
-  border-bottom: 1px solid #C5C5C5;
-}
-
-.bordertop {
-  border-top: 1px solid #C5C5C5;
-}
-
-.padtopbot15 {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.padtopbot8 {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-.wishlisting {
-  margin-right: auto;
-  margin-left: auto;
-  width: 415px;
-  display: block;
-}
-
-.resultstable td a {
-  display: block;
-  height: 100%;
+.index-search-form-container {
+  display: table;
   width: 100%;
-  text-decoration: none;
+  height: calc(100vh - 100px);
 }
 
-#id_email {
-  width: 124px;
-}
-
-#id_subject {
-  width: 124px;
-}
-
-#id_condition {
-  width: 120px;
-}
-
-#id_price {
-  width: 150px;
-}
-
-#id_image {
-  margin-right: auto;
-  margin-left: auto;
-  width: 190px;
-}
-
-#noresults {
-  color: red;
-  font-weight: bold;
-}
-
-.postcomment {
-  max-width: 210px;
-  min-width: 210px;
-  max-height: 100px;
-  min-height: 100px;
-}
-
-.feedbackcontent {
-  width: 360px;
-  height: 120px;
-}
-
-.option {
-  width: 100%;
-}
-
-#notloggedwish {
-  height: 45px;
-  width: 100%;
-  border-radius: 6px;
-  background-color: #C5C5C5;
-  border: 1px solid #C5C5C5;
-  color: black;
-}
-
-.good {
-  background-color: #52B452;
-  height: 50px;
-  width: 120px;
-}
-
-.bad {
-  background-color: #BF322E;
-  height: 50px;
-  width: 120px;
-}
-
-.delete {
-  background-color: #BF322E;
-  height: 35px;
-  width: 70px;
-  border-radius:6px;
-}
-
-#postimage {
-  margin-top: 20px;
-  max-height: 340px;
-  border-radius: 6px;
-  max-width: 320px;
-}
-
-#search {
-  width: 150px;
-  height: 30px;
-  background-color: #C5C5C5;
-}
-
-.addpostform {
-  width: 320px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #F8F8F8;
-  padding: 15px;
-  border-radius: 15px;
-  margin-top: 30px;
-}
-
-.centertext {
+.index-search-form {
+  display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 
-.center {
-  margin: 0 auto;
+.header {
+  height: 50px;
+  top: 0px;
+  position: absolute;
 }
 
-.coursetag {
-  padding:2px;
-  background-color: grey;
-  text-align: center;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+.footer {
+  bottom: 0px;
+  height: 50px;
+  position: absolute;
+}
+/* ############ DROPDOWN ################## */
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
-.semestertag {
-  padding:2px;
-  background-color: green;
-  text-align: center;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
 }
 
-.classsemester {
-  cell-spacing: 0px;
-  border-collapse: collapse;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float:right;
 }
 
-.buttonspace {
-  padding-left: 5px;
-  padding-right:5px;
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
 }
 
-.classtag {
-  padding-left: 5px;
-  padding-right:5px;
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-.button {
-  border-radius:6px;
-}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
 
-.blacklink {
-  color: #2A2A2A;
-}
-
-.blacklink:hover {
-  color: #2A2A2A;
-  text-decoration: none;
-}
-
-.blacklink:visited {
-  color: #2A2A2A;
-  text-decoration: none;
-}
-
-.borderrightleft {
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-}
-
-.textbutton {
-  background-color: #F8F8F8;
-  padding: 6px;
-  border-radius:6px;
-}
-
-.nextbutton {
-  width: 35px;
-}
-
-#help {
-  background-color: #C5C5C5;
-  z-index: 999;
-}
-
-.width20p {
-  width: 20%;
-}
-
-.width71p {
-  width: 71%;
-}
-
-.width9p {
-  width: 9%;
-}
-
-.width160 {
-  width: 160px;
-}
-
-.width235 {
-  width: 235px;
-}
-
-.width75 {
-  width: 75px;
-}
-
-.width85 {
-  width: 85px;
-}
-
-.width270 {
-  width: 270px;
-}
-
-.width110 {
-  width: 110px;
-}
-
-.width140 {
-  width: 140px;
-}
-
-.width60 {
-  width: 60px;
-}
-
-.width500{
-  width:500px;
-}
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
