--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -1,12 +1,6 @@
+{% extends "textchange/base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-  {% include "textchange/head.html" %}
-  <!-- {% load staticfiles %} -->
-  <body>
-    <div class="container">
-
-	  {% include "textchange/navbar.html" %}
+    {% block content %}
 
     <div class="row marketing">
       <div class="col-lg-6">
@@ -28,9 +22,4 @@
       </div>
     </div>
 
-    {% include "textchange/footer.html" %}
-
-  </div>
-
-  </body>
-</html>
+    {% endblock %}
