--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% include "textchange/head.html" %}
+{% extends "textchange/base.html" %}
 
-  <body>
-    <div class="container">
-
-	  {% include "textchange/navbar.html" %}
+    {% block content %}
 
       <div class="wishlisting">
       <h2>Your Postings and Wishlist</h2>
@@ -56,9 +51,4 @@
         </div>
       </div>
 
-      {% include "textchange/footer.html" %}
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+      {% endblock %}
