--- a/textchange/templates/textchange/thanks.html
+++ b/textchange/templates/textchange/thanks.html
@@ -2,12 +2,12 @@
 
     {% block content %}
 
-      <div class="jumbotron">
+      <div class="">
         <h2>Thank You for your Feedback!</h2>
       </br>
-        <p class="lead">You can proceed to use the application by using one of the links below.</p>
-        <a class="btn btn-lg btn-success" href="{% url 'textchange:index' %}" role="button">Home</a>
-        <a class="btn btn-lg btn-success" href="{% url 'textchange:about' %}" role="button">Back to Contact</a>
+        <p class="">You can proceed to use the application by using one of the links below.</p>
+        <a class="" href="{% url 'textchange:index' %}" role="button">Home</a>
+        <a class="" href="{% url 'textchange:about' %}" role="button">Back to Contact</a>
         </form>
       </div>
 
