--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -1,32 +1,186 @@
 body {
   margin: 0;
+  font-family: 'SourceSansPro';
 }
 
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('fonts/SourceSansPro-Regular.ttf');
+}
 .select2-dropdown.select2-dropdown--below {
   float: right;
   right: 0px;
 }
 
 .container {
+  background-color: #DADADA;
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+  top: 50px;
+}
+
+.results_table {
+  width: calc(100%-80px);
+  margin: 0px 40px 0px 40px;
+  border-collapse: collapse;
+}
+.results_table td {
   background-color: white;
+  height: 30px;
+}
+.results_table td a {
+  display: block;
+  padding: 5px;
+  color: black;
+  text-decoration: none;
+}
+.results_table .results_top-left {
+  border-top: 1px black solid;
+  border-left: 1px black solid;
+}
+.results_table .results_top-middle {
+  border-top: 1px black solid;
+}
+.results_table .results_top-right {
+  border-top: 1px black solid;
+  border-right: 1px black solid;
+}
+.results_table .results_bottom-left {
+  border-bottom: 1px black solid;
+  border-left: 1px black solid;
+}
+.results_table .results_bottom-middle {
+  border-bottom: 1px black solid;
+}
+.results_table .results_bottom-right {
+  border-bottom: 1px black solid;
+  border-right: 1px black solid;
+}
+
+.post_container {
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
-.leftcolumn {
-  width: 50%;
+.login_container {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 500px;
+  background-color: white;
+}
+
+.post_info {
+  width: 350px;
   float: left;
 }
-
-.rightcolumn {
-  width: 50%;
+.post_image {
+  width: 240px;
   float: right;
 }
 
-.login {
-  float:right;
+.column3 {
+  float: right;
+}
+
+.posting_form {
+  top: 200px;
+  height: 100%;
+}
+
+.contact {
+  display: inline;
+  width: calc(50% - 15px);
+  float: left;
+  padding: 15px 0 0 10px;
+}
+.contact_in {
+  color: black;
+}
+.help_in {
+  color: black;
+  margin-left: 10px;
+}
+.facebook {
+  display: inline;
+  top: 10px;
+  width: 30px;
+}
+.facebook_block {
+  width: 30px;
+  margin-top: 10px;
+}
+.color {
+  display: inline;
+  width: calc(50% - 60px);
+  float: right;
+  margin: 15px 10px 0 0;
+}
+.color_in {
+  float: right;
+  display: inline;
+  margin-right: 20px;
+  color: black;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.leftheader {
+  float: left;
+  padding: 10px 0 0 10px;
+  display: inline-block;
+}
+
+.header_in {
+  margin-top: 4px;
+  text-decoration: none;
+  font-size: 24px;
+  color: black;
+}
+
+.rightheader {
+  float: right;
+  padding: 10px 10px 0 0;
+  display: inline-block;
+}
+
+.input_form {
+  border: none;
+  border-radius: 10px 0 0 10px;
+  background-color: #ffffff;
+  height: 40px;
+  width: 280px;
+}
+
+.input_form_school {
+  border: none;
+  border-left: 1px solid black;
+  background-color: #ffffff;
+  height: 42px;
+  width: 200px;
+  margin-left: -5px;
+}
+
+#search {
+  border: none;
+  border-left: 1px solid black;
+  border-radius: 0 10px 10px 0;
+  background-color: #ffffff;
+  height: 42px;
+  width: 42px;
+  display: inline-block;
+  margin-left: -5px;
+  background-image: url("search.svg");
+  background-size: 26px 26px;
+  background-repeat: no-repeat;
+}
+
+.search_image {
+  margin-bottom: -9px;
+  padding-top: 8px;
 }
 
 .index-search-form-container {
@@ -41,32 +195,64 @@ body {
   vertical-align: middle;
 }
 
+.results-search-form-container {
+  position: relative;
+  display: table;
+  width: 100%;
+  height: 30px;
+  top: 50px;
+  padding: 15px 0 15px 0;
+}
+
+.results-search-form {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.results_container {
+  position: relative;
+  top: 30px;
+  padding-top: 15px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.booktosell {
+  padding-top: 10px;
+  font-size: 18px;
+}
+
 .header {
   height: 50px;
   top: 0px;
-  position: absolute;
+  width: 100%;
+  background-color: #DADADA;
 }
 
 .footer {
+  float: left;
   bottom: 0px;
   height: 50px;
-  position: absolute;
+  position: fixed;
+  width: 100vw;
+  background-color: #DADADA;
+  display: inline-block;
 }
 /* ############ DROPDOWN ################## */
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
+    color: black;
     font-size: 16px;
-    border: none;
     cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: #f1f1f1;
+    border-radius: 4px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -89,7 +275,7 @@ body {
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 3px 4px;
     text-decoration: none;
     display: block;
 }
