--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -5,7 +5,7 @@
 
     <div class="container">
       {% include "textchange/navbar.html" %}
-      <div class="jumbotron">
+      <div class="">
         <h1>500 Server Error.</h1>
         <h2>(╯'□')╯  ┻━┻</h2>
       </br>
